added process group id to all process-models api routes
