# src/spiffworkflow_backend/api.yml
@@ -161,8 +161,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/WorkflowSpec"
 
-  /process-models/{process_model_id}/file:
+  /process-models/{process_group_id}/{process_model_id}/file:
     parameters:
+      - name: process_group_id
+        in: path
+        required: true
+        description: The group containing the models we want to return
+        schema:
+          type: string
       - name: process_model_id
         in: path
         required: true
@@ -278,8 +284,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/WorkflowSpec"
 
-  /process-models/{process_model_id}/process-instances:
+  /process-models/{process_group_id}/{process_model_id}/process-instances:
     parameters:
+      - name: process_group_id
+        in: path
+        required: true
+        description: The unique id of an existing process group
+        schema:
+          type: string
       - name: process_model_id
         in: path
         required: true
@@ -313,8 +325,14 @@ paths:
                 items:
                   $ref: "#/components/schemas/Workflow"
 
-  /process-models/{process_model_id}/process-instances/report:
+  /process-models/{process_group_id}/{process_model_id}/process-instances/report:
     parameters:
+      - name: process_group_id
+        in: path
+        required: true
+        description: The unique id of an existing process group
+        schema:
+          type: string
       - name: process_model_id
         in: path
         required: true
@@ -348,8 +366,14 @@ paths:
                 items:
                   $ref: "#/components/schemas/Workflow"
 
-  /process-models/{process_model_id}/file/{file_name}:
+  /process-models/{process_group_id}/{process_model_id}/file/{file_name}:
     parameters:
+      - name: process_group_id
+        in: path
+        required: true
+        description: The unique id of an existing process group
+        schema:
+          type: string
       - name: process_model_id
         in: path
         required: true
